[package]
name = "daemonizer"
version = "0.2.4"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Jan S. <jan-schreib@gmail.com>"]
repository = "https://github.com/jan-schreib/daemonizer"
documentation = "http://jan-schreib.github.io/daemonizer"
readme = "README.md"
description = "Library to enable your code run as a daemon process on Unix-like systems."
keywords = ["daemon", "daemonize", "daemonizer", "unix"]

[dependencies]
libc = "0.2.4"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
log = "0.3.4"
syslog = "3.1.0"
tempdir = "0.3.4"

[features]
default=[]
